--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@
 
 /* Start extra section complete projects */
 
-.container h2 {
+.project-title h2 {
     background-color: #FF900E;
     text-align: center;
     padding: 12px 0;
