--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,5 @@
-@media only screen and (max-width: 360px;) {
-
+@media only screen and (max-width: 576px) {
+    .container{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
